Add authentication against keycloak